--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ business.name }}</title>
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/location.css' %}">
     </link>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -29,21 +29,22 @@
 <body>
     {% include 'nav.html'%}
 
-    <div class="">
-        <div class="w-75 mx-auto">
-            <h2 class="fs-1 fw-bold text-center mt-5" style="font-weight: bold;">{{ business.name }}</h2>
-            {% if is_verified %}
-            <div class="fs-5 fw-bold text-center mt-20">
-                <p style="color:#10C483"> Verified StudySpace <span> <i class="fas fa-graduation-cap"></i> </span></p>
-            </div>
-            {% endif %}
-            <div class="text-center mt-3">
-                {% if messages %}
-                <ul class="messages">
-                    {% for message in messages %}
-                    <p{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</p>
-                        {% endfor %}
-                </ul>
+    <div class="main">
+        <div class="banner-wrapper">
+            <img class="" src="{{ business.image_url }}" />
+            <div class="location-info-head">
+                <h1>{{ business.name }}</h1>
+                {% if is_verified %}
+                <div class="fs-5 fw-bold text-center mt-20">
+                    <p style="color:#10C483"> Verified StudySpace <span> <i class="fas fa-graduation-cap"></i>
+                        </span></p>
+                </div>
+                {% endif %}
+                {% if is_business and not is_verified %}
+                <div class="mt-2 mb-3">
+                    <i class="fas fa-info-circle"></i>
+                    <a href="https://forms.gle/Dd1JsW9UfY9PowhJA">Claim this place</a>
+                </div>
                 {% endif %}
                 <form method="post">
                     {% csrf_token %}
@@ -52,123 +53,172 @@
                     {% if has_favorite %}
                     <input type="submit" class="btn btn-primary m-auto" value="Unfavorite" />
                     {% else %}
-                    <input type="submit" class="btn btn-primary m-auto" value="Add to favorite list" />
+                    <input type="submit" class="btn btn-primary m-auto" value="Add to favorite" />
                     {% endif %}
                 </form>
-                {% if is_business and not is_verified %}
-                <div class="mt-2">
-                    <a href="https://forms.gle/Dd1JsW9UfY9PowhJA">Claim this place</a>
-                </div>
+                {% if messages %}
+                <ul class="messages mt-2 mb-0">
+                    {% for message in messages %}
+                    <p{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</p>
+                        {% endfor %}
+                </ul>
                 {% endif %}
+            </div>
+            <div class="image-button-wrapper">
+                <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#imageModal">
+                    See photo
+                </button>
+            </div>
+        </div>
+        <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="imageModalLabel">{{business.name}}</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <img src="{{ business.image_url }}" />
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-7 px-5">
+                    <div class="user-reviews">
+                        <h2><i class="fas fa-comments mr-2"></i>Total {{ reviews|length }} User Reviews:</h2>
+                        {% for review in reviews %}
 
-                <div>
-                    <div class="row mt-5">
-                        <div class="column mx-auto ">
-                            <img src="{{ business.image_url }}" />
-                        </div>
-                        <div class="column container">
-                            <div class="col d-flex justify-content-center">
-                                <!-- map card -->
-                                <iframe width="520" height="450" style="border:0" loading="lazy" allowfullscreen
-                                    src="https://www.google.com/maps/embed/v1/place?key={{google}}&q={{ business.location.address1 }}">
-                                </iframe>
-                                <!-- end of map -->
+                        {% if user == review.user %}
+                        <div class="user-review">
+                            <div class="review-title">
+                                <img src="{{ user.profile.image.url }}" class="rounded-circle mr-3" width="50"
+                                    height="50" />
+                                <p>You reviewed on
+                                    {{ review.date_posted|timezone:"US/Eastern"|date:'Y-m-d' }}:
+                                </p>
                             </div>
-                        </div>
-                        <div class="text-center">
-                            <h3>Contact Details: {{ business.phone }}</h3>
-                            <h3>Address: {{ business.location.address1 }}</h3>
-                            <h3>Yelp! rating: {{ business.rating }}</h3>
-                            <h3>NYC sanitation grade: {{ sanitation.grade }}</h3>
-                            <h3>Grade date: {{ sanitation.grade_date }}</h3>
-                            <h3>Local 311 complaints: </h3>
-                            {% for complaint in three_one_one %}
-                            <h3>{{ complaint.complaint_type }} {{ complaint.created_date }} {{ complaint.description }}
-                                {{ complaint.status }}</h3>
-                            {% endfor %}
-                        </div>
-                        <div>
-                        </div>
-
-                        <div class="text-center w-75 mx-auto mt-5 mb-3">
-                            <h2 class="feature-title" style="font-weight: bold;">Ratings and Reviews </h2>
-                            <h3>Overall {{ reviews|length }} User Reviews:</h3>
-                            {% for review in reviews %}
-
-                            {% if user == review.user %}
-                            <h3>You reviewed on {{ review.date_posted|timezone:"US/Eastern"|date:'Y-m-d' }} :
+                            <p class="review-text">
                                 {{ review.review_text }} <a class="btn btn-secondary btn-sm mt-1 mb-1"
                                     href="{% url 'review-update' review.id %}" target="_blank">Update</a>
-                            </h3>
+                            </p>
 
-                            {% else %}
-                            <h3>{{ review.user.username }} reviewed on {{ review.date_posted|date:'Y-m-d' }} :
-                                {{ review.review_text }}
-                            </h3>
-                            {% endif %}
-                            {% endfor %}
-                            <h3>Post your review</h3>
-
-                            <div>
-                                <form method="post">
-                                    {% csrf_token %}
-                                    <input type="text" name="review" required="required" placeholder="Your review"
-                                        class="review-input" />
-                                    <br />
-                                    <div class="range">
-                                        <p>0</p>
-                                        <p>1</p>
-                                        <p>2</p>
-                                        <p>3</p>
-                                        <p>4</p>
-                                        <p>5</p>
-                                    </div>
-
-                                    <div>
-                                        <label for="comfort_rating" class="form-label">Comfort Rating(Average:
-                                            {{ avg_dict.comfort_rating__avg }} )</label>
-                                        <input type="range" name="comfort_rating" class="form-range" min="0" max="5"
-                                            id="comfort_rating">
-                                    </div>
-
-                                    <div>
-                                        <label for="food_rating" class="form-label">Food Rating(Average:
-                                            {{ avg_dict.food_rating__avg }} )</label>
-                                        <input type="range" name="food_rating" class="form-range" min="0" max="5"
-                                            id="food_rating">
-                                    </div>
-
-                                    <div>
-                                        <label for="wifi_rating" class="form-label">Wifi Rating(Average:
-                                            {{ avg_dict.wifi_rating__avg }} )</label>
-                                        <input type="range" name="wifi_rating" class="form-range" min="0" max="5"
-                                            id="wifi_rating">
-                                    </div>
-
-                                    <div>
-                                        <label for="charging_rating" class="form-label">Charging Rating(Average:
-                                            {{ avg_dict.charging_rating__avg }} )</label>
-                                        <input type="range" name="charging_rating" class="form-range" min="0" max="5"
-                                            id="charging_rating">
-                                    </div>
-
-                                    <div>
-                                        <label for="general_rating" class="form-label">Overall
-                                            Recommendation(Average:
-                                            {{ avg_dict.general_rating__avg }} )</label>
-                                        <input type="range" name="general_rating" class="form-range" min="0" max="5"
-                                            id="general_rating">
-                                    </div>
-
-                                    <input type="hidden" name="locationid" value="{{ locationID }}" />
-                                    <input type="hidden" name="locationname" value="{{ business.name }}" />
-                                    <input class="btn btn-primary" type="submit" />
-                                </form>
-                            </div>
                         </div>
 
+                        {% else %}
+                        <div class="user-review">
+                            <div class="review-title">
+                                <img src="{{ review.user.profile.image.url }}" class="rounded-circle mr-3" width="50"
+                                    height="50" />
+                                <p>{{ review.user.username }} reviewed on {{ review.date_posted|date:'Y-m-d' }}:</p>
+                            </div>
+                            <p class="review-text">
 
+                                {{ review.review_text }}
+                            </p>
+                        </div>
+                        {% endif %}
+                        {% endfor %}
                     </div>
+
+                    <div class="post-review">
+                        <h2><i class="fas fa-edit mr-2"></i>Post your review</h2>
+                        <form method="post">
+                            {% csrf_token %}
+                            <textarea placeholder="Your review..." name="review" required="required"></textarea>
+                            <br />
+                            <div class="range">
+                                <p>0</p>
+                                <p>1</p>
+                                <p>2</p>
+                                <p>3</p>
+                                <p>4</p>
+                                <p>5</p>
+                            </div>
+                            <div class="rating-section">
+
+                                <div>
+                                    <label for="comfort_rating" class="form-label">Comfort Rating(Average:
+                                        {{ avg_dict.comfort_rating__avg }})</label>
+                                    <input type="range" name="comfort_rating" class="form-range" min="0" max="5"
+                                        id="comfort_rating">
+                                </div>
+
+                                <div>
+                                    <label for="food_rating" class="form-label">Food Rating(Average:
+                                        {{ avg_dict.food_rating__avg }})</label>
+                                    <input type="range" name="food_rating" class="form-range" min="0" max="5"
+                                        id="food_rating">
+                                </div>
+
+                                <div>
+                                    <label for="wifi_rating" class="form-label">Wifi Rating(Average:
+                                        {{ avg_dict.wifi_rating__avg }})</label>
+                                    <input type="range" name="wifi_rating" class="form-range" min="0" max="5"
+                                        id="wifi_rating">
+                                </div>
+
+                                <div>
+                                    <label for="charging_rating" class="form-label">Charging Rating(Average:
+                                        {{ avg_dict.charging_rating__avg }})</label>
+                                    <input type="range" name="charging_rating" class="form-range" min="0" max="5"
+                                        id="charging_rating">
+                                </div>
+
+                                <div>
+                                    <label for="general_rating" class="form-label">Overall
+                                        Recommendation(Average:
+                                        {{ avg_dict.general_rating__avg }})</label>
+                                    <input type="range" name="general_rating" class="form-range secondary" min="0"
+                                        max="5" id="general_rating">
+                                </div>
+
+                                <input type="hidden" name="locationid" value="{{ locationID }}" />
+                                <input type="hidden" name="locationname" value="{{ business.name }}" />
+                                <input class="btn btn-primary" type="submit" />
+                            </div>
+                        </form>
+                    </div>
+
+                </div>
+                <div class="col-5">
+                    <div class="info-section">
+                        <h3><i class="fas fa-phone-volume mr-2"></i>Contact</h3>
+                        <p>{{ business.phone }}</p>
+                        <h3><i class="fas fa-map-marker-alt mr-2"></i>Address </h3>
+                        <p>{{ business.location.address1 }}</p>
+                        <h3><i class="fas fa-star-half-alt mr-2"></i>Yelp! rating </h3>
+                        <p>{{ business.rating }}</p>
+                        <div class="info-sub-section">
+                            <h3>NYC sanitation grade: </h3>
+                            <p>{{ sanitation.grade }}</p>
+                            <h3>Grade date: </h3>
+                            <p>{{ sanitation.grade_date }}</p>
+                            <h3>Local 311 complaints: </h3>
+                            {% for complaint in three_one_one %}
+                            <p>{{ complaint.complaint_type }} {{ complaint.created_date }} {{ complaint.description }}
+                                {{ complaint.status }}</p>
+                            {% endfor %}
+                        </div>
+                    </div>
+
+
+                    <div class="map-wrapper">
+                        <!-- map card -->
+                        <iframe class="map" loading="lazy" allowfullscreen
+                            src="https://www.google.com/maps/embed/v1/place?key={{google}}&q={{ business.location.address1 }}">
+                        </iframe>
+                        <!-- end of map -->
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
