--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -16,12 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-    </script>
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous" />
 </head>
@@ -90,13 +85,13 @@
             <div class="row mt-5">
                 <div class="col-7 px-5">
                     <div class="user-reviews">
-                        <h2><i class="fas fa-comments mr-2"></i>Total {{ reviews|length }} User Reviews:</h2>
+                        <h2><i class="fas fa-comments me-2"></i>Total {{ reviews|length }} User Reviews:</h2>
                         {% for review in reviews %}
 
                         {% if user == review.user %}
                         <div class="user-review">
                             <div class="review-title">
-                                <img src="{{ user.profile.image.url }}" class="rounded-circle mr-3" width="50"
+                                <img src="{{ user.profile.image.url }}" class="rounded-circle me-3" width="50"
                                     height="50" />
                                 <p>You reviewed on
                                     {{ review.date_posted|timezone:"US/Eastern"|date:'Y-m-d' }}:
@@ -112,7 +107,7 @@
                         {% else %}
                         <div class="user-review">
                             <div class="review-title">
-                                <img src="{{ review.user.profile.image.url }}" class="rounded-circle mr-3" width="50"
+                                <img src="{{ review.user.profile.image.url }}" class="rounded-circle me-3" width="50"
                                     height="50" />
                                 <p>{{ review.user.username }} reviewed on {{ review.date_posted|date:'Y-m-d' }}:</p>
                             </div>
@@ -126,7 +121,7 @@
                     </div>
 
                     <div class="post-review">
-                        <h2><i class="fas fa-edit mr-2"></i>Post your review</h2>
+                        <h2><i class="fas fa-edit me-2"></i>Post your review</h2>
                         <form method="post">
                             {% csrf_token %}
                             <textarea placeholder="Your review..." name="review" required="required"></textarea>
@@ -187,11 +182,11 @@
                 </div>
                 <div class="col-5">
                     <div class="info-section">
-                        <h3><i class="fas fa-phone-volume mr-2"></i>Contact</h3>
+                        <h3><i class="fas fa-phone-volume me-2"></i>Contact</h3>
                         <p>{{ business.phone }}</p>
-                        <h3><i class="fas fa-map-marker-alt mr-2"></i>Address </h3>
+                        <h3><i class="fas fa-map-marker-alt me-2"></i>Address </h3>
                         <p>{{ business.location.address1 }}</p>
-                        <h3><i class="fas fa-star-half-alt mr-2"></i>Yelp! rating </h3>
+                        <h3><i class="fas fa-star-half-alt me-2"></i>Yelp! rating </h3>
                         <p>{{ business.rating }}</p>
                         <div class="info-sub-section">
                             <h3>NYC sanitation grade: </h3>
