--- a/static/css/location.css
+++ b/static/css/location.css
@@ -1,9 +1,4 @@
-:root {
-  --color-orange-500: rgb(255, 163, 93);
-  --color-orange-400: rgb(255, 140, 51);
-  --color-gray: rgb(145, 145, 145);
-}
-
+html,
 body {
   display: flex;
   flex-direction: column;
@@ -12,6 +7,11 @@ body {
   width: 100%;
   margin: 0px;
   padding: 0px;
+}
+:root {
+  --color-orange-500: rgb(255, 163, 93);
+  --color-orange-400: rgb(255, 140, 51);
+  --color-gray: rgb(145, 145, 145);
 }
 h2 {
   font-size: 35x;
@@ -123,6 +123,7 @@ ul p {
   margin-top: 10px;
   border-top: var(--color-gray) solid 1px;
   padding-top: 10px;
+  width: 100%;
 }
 .post-review {
   border-top: var(--color-gray) solid 1px;
