--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ business.name }}</title>
-
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon/favicon.ico' %}" />
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/location.css' %}">
     </link>
