--- a/accounts/templates/accounts/about.html
+++ b/accounts/templates/accounts/about.html
@@ -69,8 +69,9 @@
                             <h3>Scott Canning</h3>
                             <div class="social-icons">
 
-                                <a href="#"><i class="fab fa-github"></i></a>
-                                <a href="#"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://github.com/Scott-Canning"><i class="fab fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/scott-canning-cfa"><i
+                                        class="fab fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -82,8 +83,8 @@
                             <h3>Kathy Ching</h3>
                             <div class="social-icons">
 
-                                <a href="#"><i class="fab fa-github"></i></a>
-                                <a href="#"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://github.com/kathylyching"><i class="fab fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/kathylyching/"><i class="fab fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -95,8 +96,9 @@
                             <h3>Simran Shandilya</h3>
                             <div class="social-icons">
 
-                                <a href="#"><i class="fab fa-github"></i></a>
-                                <a href="#"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://github.com/Simran-Shandilya"><i class="fab fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/simranshandilya"><i
+                                        class="fab fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -108,8 +110,8 @@
                             <h3>Leo Wang</h3>
                             <div class="social-icons">
 
-                                <a href="#"><i class="fab fa-github"></i></a>
-                                <a href="#"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://github.com/LihaoWang"><i class="fab fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/lihaowang98/"><i class="fab fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -121,8 +123,9 @@
                             <h3>Hang Zhang </h3>
                             <div class="social-icons">
 
-                                <a href="#"><i class="fab fa-github"></i></a>
-                                <a href="#"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://github.com/hangzhangac"><i class="fab fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/hang-zhang-470814202/"><i
+                                        class="fab fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
